Builspec.yml - change continues

--- a/WebApp/buildspec.yml
+++ b/WebApp/buildspec.yml
@@ -10,5 +10,5 @@ phases:
             - dotnet publish -c release -o ./build_output WebApp.csproj
 artifacts:
     files:
-        - CodeBuild-WebAppp/build_output/**/*
+        - ./build_output/**/*
         - scripts/**/*
