--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish -c release -o TodoWebApp/build_output TodoWebApp/WebApp/WebApp.csproj
+      - dotnet publish
 artifacts:
   files:
   - TodoWebApp/build_output/**/*
