--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish
+      - dotnet publish -o /codebuild/output/publish
 artifacts:
   files:
-  - TodoWebApp/build_output/**/*
+  - /codebuild/output/publish/**/*
   - scripts/**/*
